<resources>
    <string name="app_name">WorkoutApp</string>
    <string name="postButton">Post</string>
    <string name="cancelButton">Cancel</string>
    <string name="createPost">Create Post</string>
    <string name="addWorkoutButton">Add Workout</string>
    <string name="caption">Add Caption:</string>
    <string name="captionTextBox">Enter Caption</string>
    <string name="titleWorkout">Add a Workout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="length_label">Workout Length (Min)</string>
    <string name="diff_label">Workout Difficulty</string>
    <string name="length_input">0</string>
    <string name="diff_input">1 to 5</string>
    <string name="workout_description">Workout description:</string>
    <string name="input_workout">Describe workout here</string>
    <string name="profileButton">Profile</string>
    <string name="feedButton">Feed</string>
    <string name="postCaption">Caption</string>
    <string name="postWorkout">Workout</string>
    <string name="captionButton">Add</string>
    <string name="createProfileText">Create Profile</string>
    <string name="userText">Enter Username:</string>
    <string name="UsernameButton">Confirm</string>
    <string name="PasswordText">Enter Password:</string>
    <string name="PasswordButton">Confirm</string>
    <string name="usernameText">Username</string>
...
    <string name="LowerBodyFocus">Lower Body Focus</string>
    <string name="BodyWeightFocus">Body Weight Focus</string>
    <string name="FullBodyFocus">Full Body Focus</string>
    <string name="Post1">Post</string>
    <string name="Post2">Post</string>
    <string name="Post3">Post</string>
    <string name="addButton">Add Post</string>
    <string name="filterTitle">Filters</string>
    <string name="lengthFilter">Length</string>
    <string name="DiffFilter">Difficulty</string>
    <string name="empty"></string>
    <string name="sport">Sport Focus</string>
    <string-array name="diff_array">
...
        <item>Track and Field</item>
        <item>Basketball</item>
        <item>Rugby</item>
        <item>Rowing</item>
        <item>Swimming</item>
    </string-array>
    <string name="RemoveFilter">Remove Filters</string>
    <string name="FilterInfo">Leave field as zero if no preference</string>
    <string name="WelcomeMessage">Ultimate Social media app for Workouts</string>
    <string name="SignUpButton">Sign Up</string>
    <string name="LogInButton">Log In</string>
    <string name="NewUserMessage">Don\'t have an account?</string>
    <string name="workoutType">Workout Type</string>
...
