...
            android:layout_weight="1"
            android:text="@string/lengthFilter"
            android:textColor="#9C27B0"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/LengthInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
...
            android:layout_height="wrap_content"
            android:text="@string/DiffFilter"
            android:textColor="#9C27B0"
            android:textSize="20sp" />/>

        <Spinner
            android:id="@+id/diffOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/diff_array"
            android:minHeight="48dp"
            android:spinnerMode="dropdown" />

...
            android:layout_height="wrap_content"
            android:text="@string/sport"
            android:textColor="#9C27B0"
            android:textSize="20sp" />/>

        <Spinner
            android:id="@+id/sportOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/sport_array"
            android:minHeight="48dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <Button
        android:id="@+id/FilterSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="20dp"
        android:text="@string/SetButton"
...
