...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/FeedFilter"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/filterTitle"
...
